Fixed Navigation z-index

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -13,4 +13,5 @@
   background: rgba(0, 0, 0, 0.3);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+  z-index: 1;
 }
